# py-acidplyr

./: README.md  pyproject.toml  requirements.txt  venv.sh
docs/: api.rst  conf.py  index.rst
src/acidplyr/: __init__.py  _cast.py  _collapse_to_string.py  _filter_nested.py  _join.py  _melt.py  _mutate.py  _rbind_to_dataframe.py  _select.py  _split_by_level.py  _unlist2.py  _unnest2.py
tests/: test_cast.py  test_collapse_to_string.py  test_filter_nested.py  test_join.py  test_melt.py  test_mutate.py  test_rbind_to_dataframe.py  test_select.py  test_split_by_level.py  test_unlist2.py  test_unnest2.py
